--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="how_awesome">How awesome would you say you\'ve been today?</string>
+    <string name="reminder_text">Don\'t forget to be awesome!</string>
 </resources>
